--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -47,11 +47,15 @@
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= @item.name %></td>
+          <td class="detail-value"><%= @item.user.nickname %></td>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
           <td class="detail-value"><%= @item.category.name %></td>
+        </tr>
+        <tr>
+          <th class="detail-item">タグ</th>
+          <td class="detail-value"><%= @item.tags&.first&.tag_name %></td>
         </tr>
         <tr>
           <th class="detail-item">商品の状態</th>
