--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -58,6 +58,7 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :tag_name, class:"items-text", placeholder:"メーカーやブランドなど" %>
+        <div id="search-result"></div>
         <div class="weight-bold-text">
           商品の状態
           <span class="indispensable">必須</span>
